test/Fail/SmartRewriteInfiniteBranchLoop3.err
SmartRewriteInfiniteBranchLoop3.agda:18.1-12: warning: -W[no]RewriteRHSContainsClosures
_ : g 0 ≡ branch f  is not a legal rewrite rule, since the
right-hand side of a rewrite rule introduced by with/rewrite
contains closures (e.g. lambdas or underapplied functions) which
can cause non-termination
when checking that the pattern refl has type g 0 ≡ branch f

SmartRewriteInfiniteBranchLoop3.agda:18.1-12: error: [InvalidatedLocalRewriteRule]
Local rewrite rule invalidated after a pattern-match
when checking that the pattern refl has type g 0 ≡ branch f
